plugins {
    id 'java'
    id 'war'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
}

sourceCompatibility = "16"
targetCompatibility = "16"

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'com.github.lbovolini:ObjectMapper:0.2.3'
    implementation 'com.konghq:unirest-objectmapper-jackson:3.13.11'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
    implementation 'com.fasterxml:jackson-xml-databind:0.6.2'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.webjars.npm:xmlserializer:0.6.1'
    implementation 'edu.utah.bmi.pojava:datetime:3.0.4'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation 'jakarta.el:jakarta.el-api:5.0.1'
    implementation 'org.glassfish:jakarta.el:4.0.2'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'com.google.code.gson:gson:2.10'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.2.2'
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.0"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
}

test {
    useJUnitPlatform()
}